# msc

./: .gitignore  Practica1_IvanCañaveral.ipynb  README.md  pyproject.toml
models/: P21_convnet_trainning.ipynb  P22_convnet_explore.ipynb  P23_filter_patterns.ipynb  P24_convnet_cam.ipynb  Practica1_IvanCañaveral.ipynb  Practica2_IvanCañaveral.ipynb  Practica3_IvanCañaveral.ipynb  Practica4_IvanCañaveral.ipynb
vectors/: Ejercicio2_VSM_Ivan_Cañaveral.ipynb  Ejercicio3_LM_Ivan_Cañaveral.ipynb  SVD.ipynb
