[tool.poetry]
name = "msc"
version = "0.1.0"
description = "Master's degree notes"
authors = ["ivanCanaveral <canaveral.ivan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.5.0"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
sklearn = "^0.0.post1"
pandas = "^1.5.2"
pyarrow = "^10.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
